package ru.sectorsj.interview_preparation.hw1.third_task.shapes.option1;

public abstract class BaseCircle extends Shape {

	public BaseCircle(int width, int height) {
		super(width, height);
	}

	public BaseCircle() {
	}

	public abstract void calculeteRadius();
}
