package ru.sectorsj.interview_preparation.hw1.third_task.shapes.option1;

public abstract class BaseSquare extends Shape {

}
