package ru.sectorsj.interview_preparation.hw1.third_task.shapes.option1;

public abstract class BaseTriangle extends Shape  {
	
	public BaseTriangle(int weight, int height) {
		super(weight, height);
	}
}
