package ru.sectorsj.interview_preparation.hw1.third_task.shapes.option2.part1.polygon;

public interface Heptagon extends Polygon {
}
