package ru.sectorsj.interview_preparation.hw1.third_task.shapes.option2.part1.polygon;

import ru.sectorsj.interview_preparation.hw1.third_task.shapes.option2.part1.properties.Corractable;

public interface Hexagon extends Polygon, Corractable {
}
